--- a/standard-integration/package.json
+++ b/standard-integration/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "node-fetch": "^3.2.1"
+    "node-fetch": "^3.2.1",
+    "uuid": "^9.0.0"
   }
 }
